# cocos-demo-game

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
Classes/: ActionDemo.cpp  ActionDemo.h  AnimationDemo.cpp  AnimationDemo.h  AppDelegate.cpp  AppDelegate.h  DemoBase.cpp  DemoBase.h  EventDemo.cpp  EventDemo.h  InputDemo.cpp  InputDemo.h  LabelDemo.cpp  LabelDemo.h  MenuScene.cpp  MenuScene.h  NodeDemo.cpp  NodeDemo.h  SceneDemo.cpp  SceneDemo.h  SpriteDemo.cpp  SpriteDemo.h
compat/: glibc_compat.c
proj.linux/: main.cpp
proj.mac/: main.cpp
proj.win32/: main.cpp  main.h
